# evilpixie

./: .gitignore  CHANGELOG.md  README  README.md  RGB_REFACTOR_NOTES  TODO  architecture.markdown  build-windows.sh  evilpixie.pro  meson.build  resources.qrc  todo.txt  win32_notes.txt
data/: default.gpl  help.html
data/icons/: brush3.xpm
icons/: brush1.xpm  brush2.xpm  brush4.xpm
mac/: Info.plist  README  build.sh
packaging/: README.md  evilpixie.desktop
src/: anim.cpp  anim.h  app.cpp  app.h  blit.cpp  blit.h  blit_keyed.cpp  blit_keyed.h  blit_matte.cpp  blit_matte.h  blit_range.cpp  blit_range.h  blit_zoom.cpp  blit_zoom.h  box.cpp  box.h  brush.cpp  brush.h  cmd.cpp  cmd.h  cmd_changefmt.cpp  cmd_changefmt.h  cmd_remap.cpp  cmd_remap.h  colours.cpp  colours.h  config.h.in  draw.cpp  draw.h  draw_blit.cpp  draw_blitzoom.cpp  editor.cpp  editor.h  editview.cpp  editview.h  exception.cpp  exception.h  file_load.cpp  file_load.h  file_save.cpp  (+44 more)
src/qt/: .paletteeditor.cpp.swp  changefmtdialog.cpp  changefmtdialog.h  editorwindow.cpp  editorwindow.h  editviewwidget.cpp  editviewwidget.h  griddialog.cpp  griddialog.h  guistuff.cpp  guistuff.h  hsvwidget.cpp  hsvwidget.h  layerswidget.cpp  layerswidget.h  main.cpp  miscwindows.cpp  miscwindows.h  newprojectdialog.cpp  newprojectdialog.h  paletteeditor.cpp  paletteeditor.h  palettewidget.cpp  palettewidget.h  qtapp.cpp  qtapp.h  rangeswidget.cpp  rangeswidget.h  resizeprojectdialog.cpp  resizeprojectdialog.h  rgbpickerwidget.cpp  rgbpickerwidget.h  rgbwidget.cpp  rgbwidget.h  spritesheetdialogs.cpp  spritesheetdialogs.h
src/test/: colours_test.cpp
win32/: build.iss  build.sh  data.wxs  evilpixie.rc  main.wxs  package.sh  win32_notes.txt
